--- a/assets/css/space.css
+++ b/assets/css/space.css
@@ -159,6 +159,12 @@ body {
   animation: spin linear infinite;
 }
 
+.sun,
+.orbit,
+.planet {
+  position: absolute;
+}
+
 .mercury { animation-duration: 6s; }
 .venus   { animation-duration: 10s; }
 .earth   { animation-duration: 14s; }
